todoapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp
spec:
  selector:
    matchLabels:
      app: todoapp
  replicas: 2
  template:
    metadata:
      labels:
        app: todoapp
    spec:
      containers:
      - name: todoapp
        image: sebbycorp/sebby-simple-app:v0.0.2
        ports:
        - containerPort: 5000
