todoapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapp-service
spec:
  selector:
    app: todoapp
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
