todoapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/target-type: 'ip'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/inbound-cidrs: 0.0.0.0/0
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:616973157416:certificate/68ddcee4-f280-4ea9-ab0e-ed3f22a89e48"
    # Use this annotation (which must match a service name) to route traffic to HTTP2 backends.
    # alb.ingress.kubernetes.io/conditions.argogrpc: |
    #   [{"field":"http-header","httpHeaderConfig":{"httpHeaderName": "Content-Type", "values":["application/grpc"]}}]
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
  name: todoapp-ingress
  namespace: todoapp
spec:
  rules:
    - host: todoapp.maniak.academy
      http:
        paths:
          - backend:
              service:
                name: todoapp-service
                port:
                  number: 5000
            pathType: ImplementationSpecific
